--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -204,9 +204,16 @@
 
 @misc{dl_applications,
 	author = {Marina Chatterjee},
-	title = {Top 20 Applications of Deep Learning in 2022 Across Industries	},
+	title = {Top 20 Applications of Deep Learning in 2022 Across Industries},
 	year = {2022},
 	url = {https://www.mygreatlearning.com/blog/deep-learning-applications/}
+}
+
+@misc{CEL,
+	author = {Kiprono Elijah Koech},
+	title = {Cross-Entropy Loss Function},
+	year = {2020},
+	url = {https://towardsdatascience.com/cross-entropy-loss-function-f38c4ec8643e}
 }
 
 @misc{dl_growth,
