--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -302,3 +302,54 @@
 	year = {2012},
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@article{dropout2,
+	author  = {Nitish Srivastava and Geoffrey Hinton and Alex Krizhevsky and Ilya Sutskever and Ruslan Salakhutdinov},
+	title   = {Dropout: A Simple Way to Prevent Neural Networks from Overfitting},
+	journal = {Journal of Machine Learning Research},
+	year    = {2014},
+	volume  = {15},
+	number  = {56},
+	pages   = {1929-1958},
+	url     = {http://jmlr.org/papers/v15/srivastava14a.html}
+}
+
+@inproceedings{relu,
+	author={Vinod Nair and Geoffrey E. Hinton},
+	title={Rectified Linear Units Improve Restricted Boltzmann Machines},
+	year={2010},
+	cdate={1262304000000},
+	pages={807-814},
+	url={https://icml.cc/Conferences/2010/papers/432.pdf},
+	booktitle={ICML},
+	crossref={conf/icml/2010}
+}
+
+@INPROCEEDINGS{leakyrelu,
+	author = {Andrew L. Maas and Awni Y. Hannun and Andrew Y. Ng},
+	title = {Rectifier nonlinearities improve neural network acoustic models},
+	booktitle = {in ICML Workshop on Deep Learning for Audio, Speech and Language Processing},
+	year = {2013}
+}
+
+@misc{elu,
+	doi = {10.48550/ARXIV.1511.07289},
+	url = {https://arxiv.org/abs/1511.07289},
+	author = {Clevert, Djork-Arné and Unterthiner, Thomas and Hochreiter, Sepp},
+	keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Fast and Accurate Deep Network Learning by Exponential Linear Units (ELUs)},
+	publisher = {arXiv},
+	year = {2015},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@misc{bn,
+	doi = {10.48550/ARXIV.1502.03167},
+	url = {https://arxiv.org/abs/1502.03167},
+	author = {Ioffe, Sergey and Szegedy, Christian},
+	keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
+	publisher = {arXiv},
+	year = {2015},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
