--- a/Master Thesis/literatura.bib
+++ b/Master Thesis/literatura.bib
@@ -353,3 +353,28 @@
 	year = {2015},
 	copyright = {arXiv.org perpetual, non-exclusive license}
 }
+
+@misc{latex_nn,
+	url = {https://tikz.net/neural_networks/},
+	author = {Izaak Neutelings},
+	title = {Neural networks},
+}
+
+@misc{adam,
+	doi = {10.48550/ARXIV.1412.6980},
+	url = {https://arxiv.org/abs/1412.6980},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	keywords = {Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+	title = {Adam: A Method for Stochastic Optimization},
+	publisher = {arXiv},
+	year = {2014},
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+
+@misc{optimizers,
+	url = {https://medium.com/geekculture/a-2021-guide-to-improving-cnns-optimizers-adam-vs-sgd-495848ac6008#:~:text=One%20interesting%20and%20dominant%20argument,results%20in%20improved%20final%20performance.},
+	author = {Sieun Park},
+	title = {A 2021 Guide to improving CNNs-Optimizers: Adam vs SGD},
+	year = {2021}}
+}
